--- a/.github/workflows/jekyll-docker.yml
+++ b/.github/workflows/jekyll-docker.yml
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fast Food Restaurant - Order Online</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f4f4f4; }
-        header { background-color: #ff4500; color: white; text-align: center; padding: 20px; }
+        body { github/workflows/jekyll-docker.yml}
+        
         nav { background-color: #333; color: white; padding: 10px; text-align: center; }
         nav a { color: white; margin: 0 15px; text-decoration: none; }
         section { padding: 20px; max-width: 1200px; margin: auto; }
